docs: fix swagger annotations and generation
